--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !.yarn/versions
 
 node_modules/
+dist/
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
