--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "boleto-check",
   "packageManager": "yarn@3.2.0",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+  },
   "dependencies": {
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
 }
