--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
