--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "boleto-check",
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.1"
@@ -11,6 +12,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.1",
     "jest": "^28.1.1",
+    "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
