--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.1",
+    "@types/supertest": "^2.0.12",
     "jest": "^28.1.1",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
