--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "dayjs": "^1.11.3",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.1",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^28.1.1",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
