--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 !.yarn/sdks
 !.yarn/versions
 
+coverage/
+
 node_modules/
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
